--- a/demodocker/app/index.html
+++ b/demodocker/app/index.html
@@ -99,7 +99,7 @@
 <body>
     <div class='container' id='container'>
         <h1>User profile</h1>
-        <img src='profile-picture' alt="user-profile">
+        <img src='profile-picture' alt="My profile">
         <span>Name: </span><h3 id='name'>Anna Smith</h3>
         <hr />
         <span>Email: </span><h3 id='email'>anna.smith@example.com</h3>
