--- a/demodocker/app/index.html
+++ b/demodocker/app/index.html
@@ -100,7 +100,7 @@
     <div class='container' id='container'>
         <h1>My profile</h1>
         <img src='profile-picture' alt="user-profile">
-        <span>Name: </span><h3 id='name'>Anna Smith</h3>
+        <span>Pet Name: </span><h3 id='name'>Anna Smith</h3>
         <hr />
         <span>Email Id: </span><h3 id='email'>anna.smith@example.com</h3>
         <hr />
