--- a/demodocker/app/index.html
+++ b/demodocker/app/index.html
@@ -106,7 +106,7 @@
         <hr />
         <span>Interests: </span><h3 id='interests'>coding</h3>
         <hr />
-        <button class='button' onclick="updateProfile()">Edit Profile</button>
+        <button class='button' onclick="updateProfile()">Edit</button>
     </div>
     <div class='container' id='container-edit'>
         <h1>User profile</h1>
